--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
      
     <div class="calculator">
-        <h1 style=" color:black;">CALCULATOR!!</h1>
+        <h1 style=" color:white;">CALCULATOR!!</h1>
         <input type="text" id="display" >
         <div class="buttons">
             <button class="operator clear" onclick="clearDisplay()">AC</button>
